First draft of the overall related work

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -681,3 +681,29 @@ title = {Transportasi K. N. K.},
 institution = {Republic of Indonesia},
 year = {2018},
 }
+
+@article{cameron2017process,
+  title={Process hazard analysis, hazard identification and scenario definition: Are the conventional tools sufficient, or should and can we do much better?},
+  author={Cameron, Ian and Mannan, Sam and N{\'e}meth, Erzs{\'e}bet and Park, Sunhwa and Pasman, Hans and Rogers, William and Seligmann, Benjamin},
+  journal={Process Safety and Environmental Protection},
+  volume={110},
+  pages={53--70},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@incollection{colombo2021runtime,
+  title={Runtime Verification: Passing on the Baton},
+  author={Colombo, Christian and Pace, Gordon J and Schneider, Gerardo},
+  booktitle={Formal Methods in Outer Space},
+  pages={89--107},
+  year={2021},
+  publisher={Springer}
+}
+
+@book{fritzson2011introduction,
+  title={Introduction to modeling and simulation of technical and physical systems with Modelica},
+  author={Fritzson, Peter},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
