--- a/tex/3_RelatedWork.tex
+++ b/tex/3_RelatedWork.tex
@@ -42,20 +42,45 @@ The amount of features of a CPS also plays a significant role in this subject  \
 
 Potential design failures in CPSs may jeopardize the safety and reliability of the system's operation \cite{bolbot2019vulnerabilities}. In comparison to previous systems, behaviors that were not foreseen during the early phases of development may result in more severe financial loss, human losses, and environmental harm. Some noticeable examples are the death of six cancer patients between 1985 and 1987 as a result of radiation overexposure due to a software error in the radiation treatment device Therac-25's control section \cite{2008PrinciplesModelChecking}, and the crash of a Boeing 737-8 (MAX) attributed to the design and certification of the flight-control system of the airplane \cite{2018knkCrashReport}. Additionally, the public's tolerance for mishaps is considerably lower than it was in the past, which puts additional pressure on government agencies as well as the creators and operators of CPSs, specially in relation to safety-critical systems \cite{lee2008cyber}.
 
-sdfs
 
+%%%%%%%%%%%%%%%%%%%%%%%
+% Safety assessments
+%%%%%%%%%%%%%%%%%%%%%%%
 \section{Safety Assessments}
 
-As mentioned in the previous section, the inherent complexity of Cyber-physical systems and in its design process can lead up to unpredictable behavior, and thus to severe consequences. Hence, CPSs must be resilient to unforeseen circumstances and flexible to subsystem faults due to the uncontrolled circumstances present during their execution \cite{lee2008cyber}. This scenario raises the need for safety assurance techniques throughout the CPSs design for their management, a correct knowledge of the drawbacks and benefits of each approach, as well as the development of research directions to improve the CPSs safety assurance methods \cite{bolbot2019vulnerabilities}.
+As mentioned in the previous section, the inherent complexity of Cyber-physical systems and in its design process can lead up to unpredictable behavior, and thus to severe consequences. Hence, CPSs must be resilient to unforeseen circumstances and flexible to subsystem faults due to the uncontrolled circumstances present during their execution \cite{lee2008cyber}. This scenario raises the need for safety assurance techniques throughout the CPSs design for their management, a correct knowledge of the drawbacks and benefits of each approach, as well as the development of research directions to improve the CPSs safety assurance methods, in particular with regard to safety-critical systems \cite{bolbot2019vulnerabilities}.
+
+Recent studies \cite{banerjee2011ensuring} have shown that the safety of CPSs can be improved if the information collected from the physical environment is considered in the decision making process of the system, since this would allow for the prevention of faults in the embedded system and in the physical environment. For instance, strategies can be created to change the sampling frequency of sensors based on the charge of their battery \cite{2021BSN}.
+
+Banerjee et al. \cite{banerjee2011ensuring} extend ISO 60601's concept of safety to all mission critical CPSs. They describe it as avoiding physical environment hazards brought on by a CPS operating under normal or single fault situations. In their definition, these hazards can include software bugs, mechanical or electrical issues, thermal effects as well as radiation leakage. In turn, Bolbot et al.'s definition of safety \cite{bolbot2019vulnerabilities} follows the same path, defining it as the freedom from the unnacceptable risk of human bodily harm or health damage, as a direct or indirect result of environmental or property damage.
+
+These hazards can be identified and handled in the design phase of the system \cite{bolbot2019vulnerabilities} by the means of hazards identification and analysis, also called Safety Assurance Methods. These methods aim at identifying problematic assets, analysing the system's vulnerabilities and measuring the potential damages that may occur. Amongst the methods of hazard identification, the traditional ones are: HAZard and OPerability (HAZOP), Failure Modes and Effects Analysis (FMEA), Failure Modes and Effects Analysis (FMEA) and Fault Tree Analysis (FTA) \cite{bolbot2020novel}. Cameron el al. \cite{cameron2017process} exhaustively reviews the literature on this topic, showing how the main methods evolved over time and how they compare to each other.
+
+System verification is different approach for the provision of safety that can be used in cyber-physical system. Instead of relying on identification of hazards, it focuses on stablishing that the CPS satisfies certain properties \cite{2008PrinciplesModelChecking}. These properties are derived from the system's specification, which prescribes what the system should and should not do. In this case, faults are related to the nonfulfillment of properties, and the system is considered "correct" only when all properties are satisfied. A property specification catalog like the one from Autili et al. \cite{2015PropertySpecCatalog} can be used in this process. 
+
+One of the techniques used in the area is called Model Checking, in which a timed-automata model of the system goes through a reachability analysis in order to verify the satisfiability of the properties. Nevertheless, as stated before, modeling both the cyber and physical parts of any CPS, as well as their relationship, turns out to be a very difficult task, and oversimplified models may be rejected for failing to anticipate problems caused by the two levels, and even invalidade the model \cite{2014PerceptionsSOTAV&VCPS}. Another concern with model checking is that certain safety properties of the CPSs may not be adequately validated and tested throughout the design and construction phases.
+
+Another issue with model checking is that some of the safety properties of the CPSs may not be thoroughly verified and tested during the design and building phases. An alternative is performing the verification task after the system is deployed, in what is called Runtime Verification. This technique is considered to be a lightweight dynamic formal method in the sense that it is performed during the CPS's execution and relies on the verification of real data for the assurance of safety properties \cite{colombo2021runtime}. One of the ways in which it can be realized is by using Observers, which are a reification of the property in the form of state machines. They are responsible for reading the signals and messages that are shared among the modules of the system, checking the system's logs and so on, in order to perform statistics, identify faults and so on. They can be derived from the specified system properties through pattern catalogs \cite{2022PSP}.
+
+Our work lies in the line that divides design time and runtime. Our work aims at enhancing the CPSs safety by improving the process of specification of system properties. In that sense, a model checking process is performed based on a timed-automata model of the system and a set of system properties derived from the specification. To account for the complexities found in the relation between computing and physical process \cite{2014PerceptionsSOTAV&VCPS}, a prototype of the system will be implemented in a tool designed to simulate Cyber-physical Systems, named Modelica. It provides both a cyber and a model interface, which allows for the simulation of physical equations integrated with algorithms \cite{fritzson2011introduction}. 
+
+Additionally, observer automata will be derived from the properties and implemented in the prototype. This will enable the usage of runtime verification techniques while still in design time. A dataset will be extracted from simulation containing the execution logs, which will then be used in the Negative Selection Algorithm \cite{NSAResearch2021} for the discovery of patterns that are related to the violation of the specified properties. The patterns will be analyzed and used to enhance the properties, the system specification itself and make room for the development of fault-tolerant mechanisms and runtime monitors. We believe that these measures will account for the enhancing of the overall safety of the system.
+
+% Perceptions on the State of the Art in Verification and Validation in Cyber-Physical Systems
+% While there are existing well-grounded testing methodologies for other domains of software and formal methods have been used for verification of mission-critical systems in practice, verifying and validating CPS are complicated because of the physical aspects and external environment. For instance, there are insufficient methods for investigating the impact of the environment, or context, on a CPS [97]. External conditions, which are often hard to predict, can invalidate estimates (even worst-case ones) of the safety and reliability of a system. Modeling any CPS is further hampered by the complexity of modeling both the cyber (e.g., software, network, and computing hardware) and the physical (physical processes and their interactions) [71]. Simplified models that do not anticipate that the physical and logical components fail dependently are easily invalidated
 
 
+% A novel method for safety analysis of CPSs
+% A number of traditional methods are employed for the CPS hazard identification and analysis, namely Preliminary Hazard Analysis (PHA), HAZard and OPerability (HAZOP), Failure Modes and Effects Analysis (FMEA) and Fault Tree Analysis (FTA) [4]. Model-based approaches can be also exploited, such as presented in [10].
 
+% safety and security risk assessmentin CPS
+% Risk assessment and management focuses on the identification of assets, the analysis of vulnerabilities and the evaluation and measurement of possible damages. In general, we can roughly divide risk assessment into qualitative assessment and quantitative assessment. Qualitative assessment relies heavily on expert experience, while quantitative assessment can calculate the exact risk value of the system. Many methodologies of safety risk assessment have well developed for CPS so far, here are some typical technologies illustrating the current state of the art for CPS safety
+
+% Vulnerabilities and safety assurance methods in Cyber-Physical Systems: A comprehensive review
+% The third generation methods depend on simulation in a virtual environment and therefore consider more effectively the involved dynamic phenomena [78]
 
 % Ensuring Safety, Security, and Sustainability of Mission-Critical Cyber–Physical Systems
-% Recent works have shown that a CPS can utilize the information from the physical environment to make smart decisions for preventing these new types of hazards to both the physical environment and the computing unit thereby improving the safety of the CPS. For example, sensors in a body area network (BAN) can monitor their ambient tissue temperature and employ several control strategies (e.g., rotate cluster leader nodes [7]) to reduce their thermal impact.
-% Design and analysis of CPSs thus requires in-depth understanding of the characteristics of these information and their effects on the computing operation. As Willems has aptly pointed out [10], systems researchers should incorporate detailed behavioral characterizations of the physical environment in the theories and techniques of computer science. Lack of such considerations results in serious violations of S3 properties. For example, in case of a pulse oximeter in a BAN, if the control of the sampling frequency is not aware of the temperature rise on human skin, severe burn hazards can occur [11]. 
-% This is especially important as the number of lines of code (NLoC) to support complex mission-critical functionality is rapidly growingVthe rate being exponential in some domains, such as avionics.1 A formal representation and analysis of CPSs enables design time feedback and correction of errors before deployment hence reducing cost incurred in redesign and risks of failure [12].
-% 1) Safety: Safety is essential given the mission critical deployments of many CPSs such as in health management and avionics. ISO 60601 defines safety as the avoidance of hazards to the physical environment due to the operation of a medical device under normal or single fault condition [19]. We believe that this definition of safety can also be applied to CPSs in nonmedical domains by broadening the scope of hazards considered, including faulty operation of the computing unit, radiation leaks, thermal effects, biocompatibility issues, software failures, mechanical, and electrical hazards 
+
 % Traditionally, researchers have focused on bypassing this characterization and transforming the safety assurance problem into a well-understood problem in computer science such as formal model reachability analysis. The problem of safety assurance is consequently reduced to developing bug free software or a control system analysis problem. Such simplified notion of safety, however, may not entirely capture the hazards resulting from the dynamic cyber–physical interactions. 
 % Hence, in order to guarantee safety of CPS software, it is necessary to accurately characterize the spatio–temporal dynamics of the physical environment and its tight coupling with the computing units. In essence, more focus is needed on the interaction safety.
 
@@ -75,21 +100,11 @@ As mentioned in the previous section, the inherent complexity of Cyber-physical 
 % The tight coupling between the cyber and the physical in CPSs, though advantageous, is subject to new forms of risks that have not been considered adequately in the traditional computing domain. These new types of risks include the cyber element adversely affecting the physical environment (e.g., untimely delivery of medication or therapies) or vice versa (e.g., malfunctioning of UAV control algorithm may lead to crash of UAVs on unwanted regions causing potential loss of civilian lives).
 
 
-% Perceptions on the State of the Art in Verification and Validation in Cyber-Physical Systems
-% While there are existing well-grounded testing methodologies for other domains of software and formal methods have been used for verification of mission-critical systems in practice, verifying and validating CPS are complicated because of the physical aspects and external environment. For instance, there are insufficient methods for investigating the impact of the environment, or context, on a CPS [97]. External conditions, which are often hard to predict, can invalidate estimates (even worst-case ones) of the safety and reliability of a system. Modeling any CPS is further hampered by the complexity of modeling both the cyber (e.g., software, network, and computing hardware) and the physical (physical processes and their interactions) [71]. Simplified models that do not anticipate that the physical and logical components fail dependently are easily invalidated
 
 
-%%%%%%%%%%%%%%%%%%%%%%%
-% Safety assessments
-%%%%%%%%%%%%%%%%%%%%%%%
-% Vulnerabilities and safety assurance methods in Cyber-Physical Systems: A comprehensive review bolbot2019vulnerabilities
-% Safety is a key requirement for the CPSs, where safety can be comprehended as ‘the freedom from those conditions that can cause death, injury, occupational illness and damage or loss of equipment or property’ [10] or as ‘the freedom from unacceptable risk of physical injury or damage to the health of people, either directly, or indirectly as a result of damage to the property or to the environment’ [11]
 
-% A novel method for safety analysis of CPSs
-% The potential hazards that can arise in a system are identified by employing a hazard identification and safety analysis methods and are controlled during the system design phase [4]. A number of traditional methods are employed for the CPS hazard identification and analysis, namely Preliminary Hazard Analysis (PHA), HAZard and OPerability (HAZOP), Failure Modes and Effects Analysis (FMEA) and Fault Tree Analysis (FTA) [4]. Model-based approaches can be also exploited, such as presented in [10].
 
-% safety and security risk assessmentin CPS
-% Risk assessment and management focuses on the identification of assets, the analysis of vulnerabilities and the evaluation and measurement of possible damages. In general, we can roughly divide risk assessment into qualitative assessment and quantitative assessment. Qualitative assessment relies heavily on expert experience, while quantitative assessment can calculate the exact risk value of the system. Many methodologies of safety risk assessment have well developed for CPS so far, here are some typical technologies illustrating the current state of the art for CPS safety
+
 
 %%%%%%%%%%%%%%%%%%%%%%%
 % Why they don't work
